fixed home button and overflow

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: space-between;
   background-color: white;
+  overflow-x: hidden;
   z-index: 5;
   transition: all 500ms ease-in-out;
 
