--- a/src/components/home/home.styles.scss
+++ b/src/components/home/home.styles.scss
@@ -1,5 +1,7 @@
 .home {
 	height: 100vh;
+	width: 100vw;
+	overflow-x: hidden;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -48,15 +50,17 @@
 			margin-bottom: 140px;
 			display: flex;
 			justify-content: center;
+			overflow: hidden;
 
 			@media screen and (max-width: 768px) {
-			    margin-bottom: 80px;
+			    margin-bottom: 60px;
 			}
 
 			svg {
 				width: 750px;
+				height: 250px;
 				max-width: 70%;
-				height: auto;
+
 			}
 		}
 	}
